--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
-     background-image: url("/images/back.png");
+     background-image: url("images/back.png");
      background-size: cover;
      /* Ajuste l'image pour couvrir tout l'espace disponible */
      background-position: center center;
