--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,16 @@
  body {
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    /* background: #f4f4f9;*/
+
      margin: 0;
      height: 100vh;
      display: flex;
      align-items: center;
      justify-content: center;
-     background-image: url("images/back.png");
+     background-image: url("/images/back.png");
      background-size: cover;
-     /* Ajuste l'image pour couvrir tout l'espace disponible */
      background-position: center center;
-     /* Centre l'image */
      background-repeat: no-repeat;
-     /* Empêche la répétition de l'image */
+
  }
 
  /********************************HEADER*************************/
@@ -71,21 +69,21 @@
      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
  }
 
- .container-quiz p{
-    font-size: 1.9rem;
-    align-items: center;
-    text-align: center;
-    background-color: black;
-    color: white;
+ .container-quiz p {
+     font-size: 1.9rem;
+     align-items: center;
+     text-align: center;
+     background-color: black;
+     color: white;
 
  }
 
- .container-quiz h2{
-    text-align: center;
-    margin-bottom: 20px;
+ .container-quiz h2 {
+     text-align: center;
+     margin-bottom: 20px;
  }
 
- 
+
 
 
  .result {
@@ -95,11 +93,11 @@
      font-weight: bold;
      margin: 10px;
      color: green;
-     
+
  }
 
- 
- 
+
+
 
  /***************************************bouton*****************************/
  .btn {
@@ -119,23 +117,21 @@
  .btn:hover {
      background: rgb(43, 43, 192);
  }
+
  /***************************************zone Question*****************************/
 
-#question {
-    font-size: 1.5rem;
-    color: blue;
-   
-}
+ #question {
+     font-size: 1.5rem;
+     color: blue;
+
+ }
 
 
-.question{
-    text-align: center;
-    padding: 15px;
-    border: 2px dashed #4a90e2;
-    border-radius: 10px;
-    background: #f9f9f9;
-    margin-bottom: 20px;
-}
-
-
- 
+ .question {
+     text-align: center;
+     padding: 15px;
+     border: 2px dashed #4a90e2;
+     border-radius: 10px;
+     background: #f9f9f9;
+     margin-bottom: 20px;
+ }
