--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,20 @@
  body {
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
      margin: 0;
-     height: 100vh;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     background-image: url("/images/back.png");
-     background-size: cover;
-     background-position: center center;
-     background-repeat: no-repeat;
+    
+ }
+
+
+ .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-image: url("/images/back.png");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 
  }
 
