--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-image: url("/images/back.png");
+    background-image: url("../images/back.png");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
